--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -79,7 +79,7 @@
 			},
 			"enableDragAndDropMountUp": {
 				"name": "Enable drag and drop token for mountup",
-				"hint": "If Enabled when dragging and dropped a token it will try to mount the below token if present and if you have permissions on that token"
+				"hint": "If Enabled when dragging and dropped a token it will try to mount the below token if present and if you have owner permissions on that token"
 			},
 			"hudDisableForMount": {
 				"name": "Disable the HUD integration for the 'Mount' action",
